[package]
name = "pyrisk"
version = "0.1.2"
edition = "2024"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# Parsing
tree-sitter = "0.24"
tree-sitter-python = "0.23"
walkdir = "2"

# Git
git2 = "0.19"

# Parallelism
rayon = "1"

# Incremental index
sled = "0.34"
bincode = "1"
serde = { version = "1", features = ["derive"] }

# Output
indicatif = "0.17"
owo-colors = "4"
comfy-table = "7"

# JSON
serde_json = "1"

[dev-dependencies]
tempfile = "3.26.0"
